# reproducibility-tests

./: .gitignore  README.md  compile.py  config.yaml  judge_prompts.yaml  master.py  metadata.csv  pyproject.toml  test.py
output/20250110-020012/: metadata.yaml  output_test_data.csv
output/20250110-020124/: metadata.yaml  output_test_data.csv
output/20250110-020226/: metadata.yaml  output_test_data.csv
output/20250110-020321/: metadata.yaml  output_test_data.csv
output/20250110-020423/: metadata.yaml  output_test_data.csv
output/20250110-020543/: metadata.yaml  output_test_data.csv
output/20250110-020712/: metadata.yaml  output_test_data.csv
output/20250110-020825/: metadata.yaml  output_test_data.csv
output/20250110-020950/: metadata.yaml  output_test_data.csv
output/20250110-021102/: metadata.yaml  output_test_data.csv
output/20250110-021242/: metadata.yaml  output_test_data.csv
output/20250110-021428/: metadata.yaml  output_test_data.csv
output/20250110-021603/: metadata.yaml  output_test_data.csv
output/20250110-021744/: metadata.yaml  output_test_data.csv
output/20250110-021911/: metadata.yaml  output_test_data.csv
output/20250110-022038/: metadata.yaml  output_test_data.csv
output/20250110-022157/: metadata.yaml  output_test_data.csv
output/20250110-022312/: metadata.yaml  output_test_data.csv
output/20250110-022426/: metadata.yaml  output_test_data.csv
output/20250110-022555/: metadata.yaml  output_test_data.csv
output/20250110-022720/: metadata.yaml  (+1 more)
results/: input_test_data.csv  metadata.csv  trace.txt  variance.csv
(+58 files in other folders)
